# alacrity-chess

./: .gitignore  PROJECT_STATUS.md  build.sh  devlog.md  test_auth.sh  things_used.md
working_project/: CMakeLists.txt  COMPLETE_FIX.md  COMPLETE_IMPLEMENTATION.md  DEPLOYMENT.md  FINAL_FEATURES.md  FINAL_SUMMARY.txt  FIXES_APPLIED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.txt  PERSISTENCE_FIXED.md  PERSISTENCE_IMPLEMENTED.md  README.md  build.sh  build_server.sh  quick_start.sh  quick_test.sh  setup_and_run.sh  start_server.sh  test_all_endpoints.sh  test_features.sh  test_server.sh  test_suite.sh
working_project/client/: index.html
working_project/client/css/: main.css
working_project/client/js/: api.js  auth.js  dashboard.js  main.js
working_project/include/: b_tree.hpp  client_main.hpp  globals.hpp  graph.hpp  hash_table.hpp  http_server.hpp  logger.hpp  lru_cache.hpp  matchmaking_queue.hpp  message_protocol.hpp  network_client.hpp  server.hpp  user_manager.hpp
working_project/server/: main.cpp
working_project/server/data/: users.json
working_project/server/src/api/: game_state.hpp
working_project/server/src/core/: b_tree.hpp  graph.hpp  hash_table.hpp  max_heap.hpp  (+1 more)
working_project/source/client/: client_main.cpp  network_client.cpp
working_project/source/server/: auth_api.cpp  graph.cpp  http_server.cpp  logger.cpp  matchmaking_queue.cpp  message_protocol.cpp  server.cpp  server_main.cpp  user_manager.cpp
working_project/tests/: data_structures_test.cpp  ds_test  load_test  load_test.cpp
working_project/web/: index.html  script.js
(+155 files in other folders)
